--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -26,6 +26,7 @@
       <thead>
         <tr>
           <th>Driver</th>
+          <th>Company</th>
           <th>Rating</th>
           <th>Comments</th>
           <th>Timestamp</th>
@@ -36,6 +37,11 @@
       <tbody>
         <% @ratings.each do |rating| %>
           <tr>
+            <td><%= rating.driver.last_name << ", " << rating.driver.first_name  %></td>
+            <td><%= rating.driver.company_name %></td>
+            <td><%= rating.rating %></td>
+            <td><%= rating.comments %></td>
+            <td><%= rating.timestamp %></td>
             <td><div class="btn-group">
                     <div class="btn-group">
                         <%= button_to(show_rating_path(rating), :class => "btn btn-mini", title: "View", method: :get) do %>
