--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -26,7 +26,8 @@
         <div class="col-sm-5"><%= f.text_field :last_name, :class => "form-control" %></div>
       </div>
       <div class="form-group">
-        <%= f.file_field :avatar %>
+        <div class ="col-sm-3 control-label"><strong>Image:</strong></div>
+        <div class="col-sm-5"><%= f.file_field :avatar %></div>
       </div>
       <div class="form-group">
         <%= f.label :dob, :class => "col-sm-3 control-label" %>
