--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -41,7 +41,7 @@
               
               <td><%= user.username %> <%= user.admin ? "(ADMIN)" : ""%></td>
               <td><%= user.last_sign_in_at.nil? ? "N/A" : user.last_sign_in_at.in_time_zone("America/Chicago") %></td>
-              <td><%= link_to '', edit_user_path(user) %>    
+              <td><%= link_to '', edit_other_user_path(user.id) %>    
                   <div class="btn-group">
                       <div class="btn-group">
                           <%= button_to(show_user_path(user), :class => "btn btn-mini", title: "View", method: :get) do %>
@@ -49,7 +49,7 @@
                           <% end %>
                       </div>
                       <div class="btn-group">
-                          <%= button_to(edit_user_registration_path(user) , :class => "btn btn-mini", title: "Edit", method: :get) do %>
+                          <%= button_to(edit_other_user_path(user.id) , :class => "btn btn-mini", title: "Edit", method: :get) do %>
                             <span class="glyphicon glyphicon-pencil"></span>
                           <% end %>
                       </div>
