--- a/app/views/ratings/_form.html.erb
+++ b/app/views/ratings/_form.html.erb
@@ -16,6 +16,10 @@
     <%= f.number_field :driver_id %>
   </div>
   <div class="field">
+    <%= f.label :rider_id %><br>
+    <%= f.number_field :rider_id %>
+  </div>
+  <div class="field">
     <%= f.label :rating %><br>
     <%= f.number_field :rating %>
   </div>
